--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "https://Satham002.github.io/Swiggy_clone",
   "name": "swiggyclone",
   "version": "0.1.0",
   "private": true,
